bin/ott-src/src/grammar_parser.output
   0  $accept : %entry% $end

   1  main : items

   2  items : item items
   3        | EOF

   4  item : metavardefn
   5       | RULES rules
   6       | DEFNCLASS defnclass
   7       | FUNDEFNCLASS fundefnclass
   8       | SUBRULES subrules
   9       | CONTEXTRULES contextrules
  10       | SUBSTITUTIONS substitutions
  11       | FREEVARS freevars
  12       | EMBED embed
  13       | PARSING parsing_annotations
  14       | HOMS hom_section
  15       | COQSECTIONBEGIN coq_section_begin
  16       | COQSECTIONEND coq_section_end
  17       | COQVARIABLE coq_variable

  18  metavardefn : metavardefn_int
  19              | indexvardefn_int

  20  metavardefn_int : METAVAR ne_ident_hom_desc_list CCE metavarrep

  21  indexvardefn_int : INDEXVAR ne_ident_hom_desc_list CCE metavarrep

  22  metavarrep : homomorphism_list

  23  homomorphism_list :
  24                    | homomorphism homomorphism_list

  25  homomorphism : DOUBLELEFTBRACE hom_name hom_spec_el_list DOUBLERIGHTBRACE

  26  hom_name : STRING BLANKS
  27           | BLANKS STRING BLANKS

  28  hom_spec_el_list :
  29                   | hom_spec_el hom_spec_el_list

  30  hom_spec_el : DOUBLELEFTBRACKET hom_inner DOUBLERIGHTBRACKET
  31              | STRING
  32              | BLANKS
  33              | DOTDOT
  34              | DOTDOTDOT
  35              | DOTDOTDOTDOT

  36  hom_inner : ident_and_blanks_list
  37            | ident_and_blanks_list dots ident_and_blanks_list
  38            | COMP_LEFT ident_and_blanks_list COMP_MIDDLE comp_bound COMP_RIGHT blanks_list

  39  embedmorphism_list :
  40                     | embedmorphism embedmorphism_list

  41  embedmorphism : DOUBLELEFTBRACE hom_name embed_spec_el_list DOUBLERIGHTBRACE

  42  embed_spec_el_list :
  43                     | embed_spec_el embed_spec_el_list

  44  embed_spec_el : DOUBLELEFTBRACKET embed_inner DOUBLERIGHTBRACKET
  45                | STRING
  46                | BLANKS
  47                | DOTDOT
  48                | DOTDOTDOT
  49                | DOTDOTDOTDOT

  50  embed_inner :
  51              | STRING embed_inner
  52              | BLANKS embed_inner

  53  bindspec : BIND mse IN ident
  54           | ident EQ mse
  55           | NAMES LPAREN mse RPAREN EQ NAMES LPAREN mse RPAREN
  56           | NAMES LPAREN mse RPAREN HASH NAMES LPAREN mse RPAREN
  57           | DISTINCTNAMES LPAREN mse RPAREN

  58  bindspeclist :
  59               | bindspec bindspeclist

  60  mse : ident
  61      | ident dots ident
  62      | COMP_LEFT ident COMP_MIDDLE comp_bound COMP_RIGHT
  63      | ident LPAREN ident RPAREN
  64      | ident LPAREN ident dots ident RPAREN
  65      | ident LPAREN COMP_LEFT ident COMP_MIDDLE comp_bound COMP_RIGHT RPAREN
  66      | ident COMP_LEFT ident COMP_MIDDLE comp_bound COMP_RIGHT
  67      | mse UNION mse
  68      | EMPTY

  69  bindspeclistlist :
  70                   | BIND_LEFT_DELIM bindspeclist BIND_RIGHT_DELIM bindspeclistlist

  71  bindspecall : bindspeclistlist

  72  dots : DOTDOT
  73       | DOTDOTDOT
  74       | DOTDOTDOTDOT

  75  element : ident
  76          | dots
  77          | COMP_LEFT element_list COMP_MIDDLE comp_bound COMP_RIGHT
  78          | COMP_LEFT element_list COMP_MIDDLE ident COMP_MIDDLE comp_bound COMP_RIGHT

  79  comp_bound : ident
  80             | ident COMP_IN ident
  81             | ident COMP_IN ident dots ident

  82  element_list :
  83               | element element_list

  84  rules : rule_list

  85  rule_list :
  86            | rule rule_list

  87  rule : ne_ident_hom_desc_list COLONCOLON STRING CCE homomorphism_list prodlist

  88  prod : flavour element_list COLONCOLON ident_list COLONCOLON STRING bindspecall homomorphism_list

  89  prodlist :
  90           | prod prodlist

  91  flavour : BAR

  92  ident_desc : STRING

  93  ne_ident_hom_desc_list : ident_desc homomorphism_list
  94                         | ident_desc homomorphism_list COMMA ne_ident_hom_desc_list

  95  ident_desc_list :
  96                  | ident_desc COMMA ident_desc_list

  97  ident : STRING

  98  blanks : BLANKS

  99  ident_list :
 100             | ident ident_list
 101             | BLANKS ident_list

 102  ident_and_blanks_list :
 103                        | ident ident_and_blanks_list
 104                        | blanks ident_and_blanks_list

 105  blanks_list :
 106              | BLANKS blanks_list

 107  defnclass : STRING COLONCOLON STRING CCE homomorphism_list defn_list

 108  defn_list :
 109            | defn defn_list

 110  defn : DEFN element_list COLONCOLON ident_list COLONCOLON STRING COLONCOLON STRING homomorphism_list BY semiraw_rule_list

 111  drule_line_annot : ident_list COLONCOLON STRING homomorphism_list EOF

 112  fundefnclass : STRING CCE homomorphism_list fundefn_list

 113  fundefn_list :
 114               | fundefn fundefn_list

 115  fundefn : FUNDEFN element_list COLONCOLON ident COLONCOLON STRING homomorphism_list BY BLANKLINE anylinelist

 116  anylinelist :
 117              | line anylinelist
 118              | COMMENTLINE anylinelist
 119              | BLANKLINE anylinelist

 120  line : LINE

 121  lineline : LINELINE

 122  linelist :
 123           | line linelist
 124           | COMMENTLINE linelist

 125  nelinelist : line linelist
 126             | COMMENTLINE linelist

 127  semiraw_rule : linelist lineline linelist
 128               | nelinelist

 129  blanklinelist :
 130                | BLANKLINE blanklinelist

 131  neblanklinelist : BLANKLINE
 132                  | BLANKLINE neblanklinelist

 133  defncom : DEFNCOM embed_spec_el_list DOUBLERIGHTBRACE

 134  semiraw_rule_list : blanklinelist
 135                    | neblanklinelist semiraw_rule semiraw_rule_list
 136                    | neblanklinelist defncom semiraw_rule_list

 137  subrules : subrules_body

 138  subrules_body :
 139                | subrule subrules_body

 140  subrule : ident_desc LTCOLONCOLON ident_desc homomorphism_list

 141  contextrules : contextrules_body

 142  contextrules_body :
 143                    | contextrule contextrules_body

 144  contextrule : ident_desc UNDERSCORECOLONCOLON ident_desc COLONCOLON ident_desc

 145  substitutions : substitutions_body

 146  substitutions_body :
 147                     | substitution substitutions_body

 148  substitution : substitution_kind ident_desc ident_desc COLONCOLON ident_desc homomorphism_list

 149  substitution_kind : SINGLE
 150                    | MULTIPLE

 151  freevars : freevars_body

 152  freevars_body :
 153                | freevar freevars_body

 154  freevar : ident_desc ident_desc COLONCOLON ident_desc homomorphism_list

 155  embed : embedmorphism_list

 156  parsing_annotation_type : LTEQ
 157                          | LEFT
 158                          | RIGHT
 159                          | NON

 160  parsing_annotations : parsing_annotations_body

 161  parsing_annotations_body :
 162                           | parsing_annotation parsing_annotations_body

 163  parsing_annotation : ident_desc parsing_annotation_type ident_desc

 164  hom_section_item : COLONCOLON STRING bindspecall homomorphism_list

 165  hom_section_item_list :
 166                        | hom_section_item hom_section_item_list

 167  hom_section : STRING hom_section_item_list

 168  coq_section_begin : STRING

 169  coq_section_end : STRING

 170  coq_variable : STRING

 171  unfiltered_spec_el_list :
 172                          | unfiltered_spec_el unfiltered_spec_el_list

 173  unfiltered_spec_el : DOUBLELEFTBRACKET unfiltered_inner DOUBLERIGHTBRACKET
 174                     | STRING
 175                     | BLANKS

 176  unfiltered_inner :
 177                   | STRING unfiltered_inner
 178                   | BLANKS unfiltered_inner

 179  %entry% : '\001' main
 180          | '\002' drule_line_annot
 181          | '\003' unfiltered_spec_el_list
 182          | '\004' embed_spec_el_list

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	'\003'  shift 3
	'\004'  shift 4
	.  error

	%entry%  goto 5


state 1
	%entry% : '\001' . main  (179)

	EOF  shift 6
	EMBED  shift 7
	METAVAR  shift 8
	INDEXVAR  shift 9
	RULES  shift 10
	SUBRULES  shift 11
	CONTEXTRULES  shift 12
	SUBSTITUTIONS  shift 13
	FREEVARS  shift 14
	DEFNCLASS  shift 15
	FUNDEFNCLASS  shift 16
	HOMS  shift 17
	PARSING  shift 18
	COQSECTIONBEGIN  shift 19
	COQSECTIONEND  shift 20
	COQVARIABLE  shift 21
	.  error

	main  goto 22
	items  goto 23
	item  goto 24
	metavardefn  goto 25
	metavardefn_int  goto 26
	indexvardefn_int  goto 27


state 2
	%entry% : '\002' . drule_line_annot  (180)
	ident_list : .  (99)

	STRING  shift 28
	BLANKS  shift 29
	COLONCOLON  reduce 99

	drule_line_annot  goto 30
	ident  goto 31
	ident_list  goto 32


state 3
	%entry% : '\003' . unfiltered_spec_el_list  (181)
	unfiltered_spec_el_list : .  (171)

	STRING  shift 33
	BLANKS  shift 34
	DOUBLELEFTBRACKET  shift 35
	$end  reduce 171

	unfiltered_spec_el_list  goto 36
	unfiltered_spec_el  goto 37


state 4
	%entry% : '\004' . embed_spec_el_list  (182)
	embed_spec_el_list : .  (42)

	STRING  shift 38
	BLANKS  shift 39
	DOUBLELEFTBRACKET  shift 40
	DOTDOT  shift 41
	DOTDOTDOT  shift 42
	DOTDOTDOTDOT  shift 43
	$end  reduce 42

	embed_spec_el_list  goto 44
	embed_spec_el  goto 45


state 5
	$accept : %entry% . $end  (0)

	$end  accept


state 6
	items : EOF .  (3)

	.  reduce 3


state 7
	item : EMBED . embed  (12)
	embedmorphism_list : .  (39)

	DOUBLELEFTBRACE  shift 46
	EOF  reduce 39
	EMBED  reduce 39
	METAVAR  reduce 39
	INDEXVAR  reduce 39
	RULES  reduce 39
	SUBRULES  reduce 39
	CONTEXTRULES  reduce 39
	SUBSTITUTIONS  reduce 39
	FREEVARS  reduce 39
	DEFNCLASS  reduce 39
	FUNDEFNCLASS  reduce 39
	HOMS  reduce 39
	PARSING  reduce 39
	COQSECTIONBEGIN  reduce 39
	COQSECTIONEND  reduce 39
	COQVARIABLE  reduce 39

	embed  goto 47
	embedmorphism_list  goto 48
	embedmorphism  goto 49


state 8
	metavardefn_int : METAVAR . ne_ident_hom_desc_list CCE metavarrep  (20)

	STRING  shift 50
	.  error

	ne_ident_hom_desc_list  goto 51
	ident_desc  goto 52


state 9
	indexvardefn_int : INDEXVAR . ne_ident_hom_desc_list CCE metavarrep  (21)

	STRING  shift 50
	.  error

	ne_ident_hom_desc_list  goto 53
	ident_desc  goto 52


state 10
	item : RULES . rules  (5)
	rule_list : .  (85)

	STRING  shift 50
	EOF  reduce 85
	EMBED  reduce 85
	METAVAR  reduce 85
	INDEXVAR  reduce 85
	RULES  reduce 85
	SUBRULES  reduce 85
	CONTEXTRULES  reduce 85
	SUBSTITUTIONS  reduce 85
	FREEVARS  reduce 85
	DEFNCLASS  reduce 85
	FUNDEFNCLASS  reduce 85
	HOMS  reduce 85
	PARSING  reduce 85
	COQSECTIONBEGIN  reduce 85
	COQSECTIONEND  reduce 85
	COQVARIABLE  reduce 85

	rules  goto 54
	ne_ident_hom_desc_list  goto 55
	rule_list  goto 56
	rule  goto 57
	ident_desc  goto 52


state 11
	item : SUBRULES . subrules  (8)
	subrules_body : .  (138)

	STRING  shift 50
	EOF  reduce 138
	EMBED  reduce 138
	METAVAR  reduce 138
	INDEXVAR  reduce 138
	RULES  reduce 138
	SUBRULES  reduce 138
	CONTEXTRULES  reduce 138
	SUBSTITUTIONS  reduce 138
	FREEVARS  reduce 138
	DEFNCLASS  reduce 138
	FUNDEFNCLASS  reduce 138
	HOMS  reduce 138
	PARSING  reduce 138
	COQSECTIONBEGIN  reduce 138
	COQSECTIONEND  reduce 138
	COQVARIABLE  reduce 138

	subrules  goto 58
	ident_desc  goto 59
	subrules_body  goto 60
	subrule  goto 61


state 12
	item : CONTEXTRULES . contextrules  (9)
	contextrules_body : .  (142)

	STRING  shift 50
	EOF  reduce 142
	EMBED  reduce 142
	METAVAR  reduce 142
	INDEXVAR  reduce 142
	RULES  reduce 142
	SUBRULES  reduce 142
	CONTEXTRULES  reduce 142
	SUBSTITUTIONS  reduce 142
	FREEVARS  reduce 142
	DEFNCLASS  reduce 142
	FUNDEFNCLASS  reduce 142
	HOMS  reduce 142
	PARSING  reduce 142
	COQSECTIONBEGIN  reduce 142
	COQSECTIONEND  reduce 142
	COQVARIABLE  reduce 142

	contextrules  goto 62
	ident_desc  goto 63
	contextrules_body  goto 64
	contextrule  goto 65


state 13
	item : SUBSTITUTIONS . substitutions  (10)
	substitutions_body : .  (146)

	SINGLE  shift 66
	MULTIPLE  shift 67
	EOF  reduce 146
	EMBED  reduce 146
	METAVAR  reduce 146
	INDEXVAR  reduce 146
	RULES  reduce 146
	SUBRULES  reduce 146
	CONTEXTRULES  reduce 146
	SUBSTITUTIONS  reduce 146
	FREEVARS  reduce 146
	DEFNCLASS  reduce 146
	FUNDEFNCLASS  reduce 146
	HOMS  reduce 146
	PARSING  reduce 146
	COQSECTIONBEGIN  reduce 146
	COQSECTIONEND  reduce 146
	COQVARIABLE  reduce 146

	substitutions  goto 68
	substitutions_body  goto 69
	substitution  goto 70
	substitution_kind  goto 71


state 14
	item : FREEVARS . freevars  (11)
	freevars_body : .  (152)

	STRING  shift 50
	EOF  reduce 152
	EMBED  reduce 152
	METAVAR  reduce 152
	INDEXVAR  reduce 152
	RULES  reduce 152
	SUBRULES  reduce 152
	CONTEXTRULES  reduce 152
	SUBSTITUTIONS  reduce 152
	FREEVARS  reduce 152
	DEFNCLASS  reduce 152
	FUNDEFNCLASS  reduce 152
	HOMS  reduce 152
	PARSING  reduce 152
	COQSECTIONBEGIN  reduce 152
	COQSECTIONEND  reduce 152
	COQVARIABLE  reduce 152

	freevars  goto 72
	ident_desc  goto 73
	freevars_body  goto 74
	freevar  goto 75


state 15
	item : DEFNCLASS . defnclass  (6)

	STRING  shift 76
	.  error

	defnclass  goto 77


state 16
	item : FUNDEFNCLASS . fundefnclass  (7)

	STRING  shift 78
	.  error

	fundefnclass  goto 79


state 17
	item : HOMS . hom_section  (14)

	STRING  shift 80
	.  error

	hom_section  goto 81


state 18
	item : PARSING . parsing_annotations  (13)
	parsing_annotations_body : .  (161)

	STRING  shift 50
	EOF  reduce 161
	EMBED  reduce 161
	METAVAR  reduce 161
	INDEXVAR  reduce 161
	RULES  reduce 161
	SUBRULES  reduce 161
	CONTEXTRULES  reduce 161
	SUBSTITUTIONS  reduce 161
	FREEVARS  reduce 161
	DEFNCLASS  reduce 161
	FUNDEFNCLASS  reduce 161
	HOMS  reduce 161
	PARSING  reduce 161
	COQSECTIONBEGIN  reduce 161
	COQSECTIONEND  reduce 161
	COQVARIABLE  reduce 161

	parsing_annotations  goto 82
	ident_desc  goto 83
	parsing_annotations_body  goto 84
	parsing_annotation  goto 85


state 19
	item : COQSECTIONBEGIN . coq_section_begin  (15)

	STRING  shift 86
	.  error

	coq_section_begin  goto 87


state 20
	item : COQSECTIONEND . coq_section_end  (16)

	STRING  shift 88
	.  error

	coq_section_end  goto 89


state 21
	item : COQVARIABLE . coq_variable  (17)

	STRING  shift 90
	.  error

	coq_variable  goto 91


state 22
	%entry% : '\001' main .  (179)

	.  reduce 179


state 23
	main : items .  (1)

	.  reduce 1


state 24
	items : item . items  (2)

	EOF  shift 6
	EMBED  shift 7
	METAVAR  shift 8
	INDEXVAR  shift 9
	RULES  shift 10
	SUBRULES  shift 11
	CONTEXTRULES  shift 12
	SUBSTITUTIONS  shift 13
	FREEVARS  shift 14
	DEFNCLASS  shift 15
	FUNDEFNCLASS  shift 16
	HOMS  shift 17
	PARSING  shift 18
	COQSECTIONBEGIN  shift 19
	COQSECTIONEND  shift 20
	COQVARIABLE  shift 21
	.  error

	items  goto 92
	item  goto 24
	metavardefn  goto 25
	metavardefn_int  goto 26
	indexvardefn_int  goto 27


state 25
	item : metavardefn .  (4)

	.  reduce 4


state 26
	metavardefn : metavardefn_int .  (18)

	.  reduce 18


state 27
	metavardefn : indexvardefn_int .  (19)

	.  reduce 19


state 28
	ident : STRING .  (97)

	.  reduce 97


state 29
	ident_list : BLANKS . ident_list  (101)
	ident_list : .  (99)

	STRING  shift 28
	BLANKS  shift 29
	COLONCOLON  reduce 99

	ident  goto 31
	ident_list  goto 93


state 30
	%entry% : '\002' drule_line_annot .  (180)

	.  reduce 180


state 31
	ident_list : ident . ident_list  (100)
	ident_list : .  (99)

	STRING  shift 28
	BLANKS  shift 29
	COLONCOLON  reduce 99

	ident  goto 31
	ident_list  goto 94


state 32
	drule_line_annot : ident_list . COLONCOLON STRING homomorphism_list EOF  (111)

	COLONCOLON  shift 95
	.  error


state 33
	unfiltered_spec_el : STRING .  (174)

	.  reduce 174


state 34
	unfiltered_spec_el : BLANKS .  (175)

	.  reduce 175


state 35
	unfiltered_spec_el : DOUBLELEFTBRACKET . unfiltered_inner DOUBLERIGHTBRACKET  (173)
	unfiltered_inner : .  (176)

	STRING  shift 96
	BLANKS  shift 97
	DOUBLERIGHTBRACKET  reduce 176

	unfiltered_inner  goto 98


state 36
	%entry% : '\003' unfiltered_spec_el_list .  (181)

	.  reduce 181


state 37
	unfiltered_spec_el_list : unfiltered_spec_el . unfiltered_spec_el_list  (172)
	unfiltered_spec_el_list : .  (171)

	STRING  shift 33
	BLANKS  shift 34
	DOUBLELEFTBRACKET  shift 35
	$end  reduce 171

	unfiltered_spec_el_list  goto 99
	unfiltered_spec_el  goto 37


state 38
	embed_spec_el : STRING .  (45)

	.  reduce 45


state 39
	embed_spec_el : BLANKS .  (46)

	.  reduce 46


state 40
	embed_spec_el : DOUBLELEFTBRACKET . embed_inner DOUBLERIGHTBRACKET  (44)
	embed_inner : .  (50)

	STRING  shift 100
	BLANKS  shift 101
	DOUBLERIGHTBRACKET  reduce 50

	embed_inner  goto 102


state 41
	embed_spec_el : DOTDOT .  (47)

	.  reduce 47


state 42
	embed_spec_el : DOTDOTDOT .  (48)

	.  reduce 48


state 43
	embed_spec_el : DOTDOTDOTDOT .  (49)

	.  reduce 49


state 44
	%entry% : '\004' embed_spec_el_list .  (182)

	.  reduce 182


state 45
	embed_spec_el_list : embed_spec_el . embed_spec_el_list  (43)
	embed_spec_el_list : .  (42)

	STRING  shift 38
	BLANKS  shift 39
	DOUBLELEFTBRACKET  shift 40
	DOTDOT  shift 41
	DOTDOTDOT  shift 42
	DOTDOTDOTDOT  shift 43
	$end  reduce 42
	DOUBLERIGHTBRACE  reduce 42

	embed_spec_el_list  goto 103
	embed_spec_el  goto 45


state 46
	embedmorphism : DOUBLELEFTBRACE . hom_name embed_spec_el_list DOUBLERIGHTBRACE  (41)

	STRING  shift 104
	BLANKS  shift 105
	.  error

	hom_name  goto 106


state 47
	item : EMBED embed .  (12)

	.  reduce 12


state 48
	embed : embedmorphism_list .  (155)

	.  reduce 155


state 49
	embedmorphism_list : embedmorphism . embedmorphism_list  (40)
	embedmorphism_list : .  (39)

	DOUBLELEFTBRACE  shift 46
	EOF  reduce 39
	EMBED  reduce 39
	METAVAR  reduce 39
	INDEXVAR  reduce 39
	RULES  reduce 39
	SUBRULES  reduce 39
	CONTEXTRULES  reduce 39
	SUBSTITUTIONS  reduce 39
	FREEVARS  reduce 39
	DEFNCLASS  reduce 39
	FUNDEFNCLASS  reduce 39
	HOMS  reduce 39
	PARSING  reduce 39
	COQSECTIONBEGIN  reduce 39
	COQSECTIONEND  reduce 39
	COQVARIABLE  reduce 39

	embedmorphism_list  goto 107
	embedmorphism  goto 49


state 50
	ident_desc : STRING .  (92)

	.  reduce 92


state 51
	metavardefn_int : METAVAR ne_ident_hom_desc_list . CCE metavarrep  (20)

	CCE  shift 108
	.  error


state 52
	ne_ident_hom_desc_list : ident_desc . homomorphism_list  (93)
	ne_ident_hom_desc_list : ident_desc . homomorphism_list COMMA ne_ident_hom_desc_list  (94)
	homomorphism_list : .  (23)

	DOUBLELEFTBRACE  shift 109
	COMMA  reduce 23
	CCE  reduce 23
	COLONCOLON  reduce 23

	homomorphism_list  goto 110
	homomorphism  goto 111


state 53
	indexvardefn_int : INDEXVAR ne_ident_hom_desc_list . CCE metavarrep  (21)

	CCE  shift 112
	.  error


state 54
	item : RULES rules .  (5)

	.  reduce 5


state 55
	rule : ne_ident_hom_desc_list . COLONCOLON STRING CCE homomorphism_list prodlist  (87)

	COLONCOLON  shift 113
	.  error


state 56
	rules : rule_list .  (84)

	.  reduce 84


state 57
	rule_list : rule . rule_list  (86)
	rule_list : .  (85)

	STRING  shift 50
	EOF  reduce 85
	EMBED  reduce 85
	METAVAR  reduce 85
	INDEXVAR  reduce 85
	RULES  reduce 85
	SUBRULES  reduce 85
	CONTEXTRULES  reduce 85
	SUBSTITUTIONS  reduce 85
	FREEVARS  reduce 85
	DEFNCLASS  reduce 85
	FUNDEFNCLASS  reduce 85
	HOMS  reduce 85
	PARSING  reduce 85
	COQSECTIONBEGIN  reduce 85
	COQSECTIONEND  reduce 85
	COQVARIABLE  reduce 85

	ne_ident_hom_desc_list  goto 55
	rule_list  goto 114
	rule  goto 57
	ident_desc  goto 52


state 58
	item : SUBRULES subrules .  (8)

	.  reduce 8


state 59
	subrule : ident_desc . LTCOLONCOLON ident_desc homomorphism_list  (140)

	LTCOLONCOLON  shift 115
	.  error


state 60
	subrules : subrules_body .  (137)

	.  reduce 137


state 61
	subrules_body : subrule . subrules_body  (139)
	subrules_body : .  (138)

	STRING  shift 50
	EOF  reduce 138
	EMBED  reduce 138
	METAVAR  reduce 138
	INDEXVAR  reduce 138
	RULES  reduce 138
	SUBRULES  reduce 138
	CONTEXTRULES  reduce 138
	SUBSTITUTIONS  reduce 138
	FREEVARS  reduce 138
	DEFNCLASS  reduce 138
	FUNDEFNCLASS  reduce 138
	HOMS  reduce 138
	PARSING  reduce 138
	COQSECTIONBEGIN  reduce 138
	COQSECTIONEND  reduce 138
	COQVARIABLE  reduce 138

	ident_desc  goto 59
	subrules_body  goto 116
	subrule  goto 61


state 62
	item : CONTEXTRULES contextrules .  (9)

	.  reduce 9


state 63
	contextrule : ident_desc . UNDERSCORECOLONCOLON ident_desc COLONCOLON ident_desc  (144)

	UNDERSCORECOLONCOLON  shift 117
	.  error


state 64
	contextrules : contextrules_body .  (141)

	.  reduce 141


state 65
	contextrules_body : contextrule . contextrules_body  (143)
	contextrules_body : .  (142)

	STRING  shift 50
	EOF  reduce 142
	EMBED  reduce 142
	METAVAR  reduce 142
	INDEXVAR  reduce 142
	RULES  reduce 142
	SUBRULES  reduce 142
	CONTEXTRULES  reduce 142
	SUBSTITUTIONS  reduce 142
	FREEVARS  reduce 142
	DEFNCLASS  reduce 142
	FUNDEFNCLASS  reduce 142
	HOMS  reduce 142
	PARSING  reduce 142
	COQSECTIONBEGIN  reduce 142
	COQSECTIONEND  reduce 142
	COQVARIABLE  reduce 142

	ident_desc  goto 63
	contextrules_body  goto 118
	contextrule  goto 65


state 66
	substitution_kind : SINGLE .  (149)

	.  reduce 149


state 67
	substitution_kind : MULTIPLE .  (150)

	.  reduce 150


state 68
	item : SUBSTITUTIONS substitutions .  (10)

	.  reduce 10


state 69
	substitutions : substitutions_body .  (145)

	.  reduce 145


state 70
	substitutions_body : substitution . substitutions_body  (147)
	substitutions_body : .  (146)

	SINGLE  shift 66
	MULTIPLE  shift 67
	EOF  reduce 146
	EMBED  reduce 146
	METAVAR  reduce 146
	INDEXVAR  reduce 146
	RULES  reduce 146
	SUBRULES  reduce 146
	CONTEXTRULES  reduce 146
	SUBSTITUTIONS  reduce 146
	FREEVARS  reduce 146
	DEFNCLASS  reduce 146
	FUNDEFNCLASS  reduce 146
	HOMS  reduce 146
	PARSING  reduce 146
	COQSECTIONBEGIN  reduce 146
	COQSECTIONEND  reduce 146
	COQVARIABLE  reduce 146

	substitutions_body  goto 119
	substitution  goto 70
	substitution_kind  goto 71


state 71
	substitution : substitution_kind . ident_desc ident_desc COLONCOLON ident_desc homomorphism_list  (148)

	STRING  shift 50
	.  error

	ident_desc  goto 120


state 72
	item : FREEVARS freevars .  (11)

	.  reduce 11


state 73
	freevar : ident_desc . ident_desc COLONCOLON ident_desc homomorphism_list  (154)

	STRING  shift 50
	.  error

	ident_desc  goto 121


state 74
	freevars : freevars_body .  (151)

	.  reduce 151


state 75
	freevars_body : freevar . freevars_body  (153)
	freevars_body : .  (152)

	STRING  shift 50
	EOF  reduce 152
	EMBED  reduce 152
	METAVAR  reduce 152
	INDEXVAR  reduce 152
	RULES  reduce 152
	SUBRULES  reduce 152
	CONTEXTRULES  reduce 152
	SUBSTITUTIONS  reduce 152
	FREEVARS  reduce 152
	DEFNCLASS  reduce 152
	FUNDEFNCLASS  reduce 152
	HOMS  reduce 152
	PARSING  reduce 152
	COQSECTIONBEGIN  reduce 152
	COQSECTIONEND  reduce 152
	COQVARIABLE  reduce 152

	ident_desc  goto 73
	freevars_body  goto 122
	freevar  goto 75


state 76
	defnclass : STRING . COLONCOLON STRING CCE homomorphism_list defn_list  (107)

	COLONCOLON  shift 123
	.  error


state 77
	item : DEFNCLASS defnclass .  (6)

	.  reduce 6


state 78
	fundefnclass : STRING . CCE homomorphism_list fundefn_list  (112)

	CCE  shift 124
	.  error


state 79
	item : FUNDEFNCLASS fundefnclass .  (7)

	.  reduce 7


state 80
	hom_section : STRING . hom_section_item_list  (167)
	hom_section_item_list : .  (165)

	COLONCOLON  shift 125
	EOF  reduce 165
	EMBED  reduce 165
	METAVAR  reduce 165
	INDEXVAR  reduce 165
	RULES  reduce 165
	SUBRULES  reduce 165
	CONTEXTRULES  reduce 165
	SUBSTITUTIONS  reduce 165
	FREEVARS  reduce 165
	DEFNCLASS  reduce 165
	FUNDEFNCLASS  reduce 165
	HOMS  reduce 165
	PARSING  reduce 165
	COQSECTIONBEGIN  reduce 165
	COQSECTIONEND  reduce 165
	COQVARIABLE  reduce 165

	hom_section_item  goto 126
	hom_section_item_list  goto 127


state 81
	item : HOMS hom_section .  (14)

	.  reduce 14


state 82
	item : PARSING parsing_annotations .  (13)

	.  reduce 13


state 83
	parsing_annotation : ident_desc . parsing_annotation_type ident_desc  (163)

	LTEQ  shift 128
	LEFT  shift 129
	RIGHT  shift 130
	NON  shift 131
	.  error

	parsing_annotation_type  goto 132


state 84
	parsing_annotations : parsing_annotations_body .  (160)

	.  reduce 160


state 85
	parsing_annotations_body : parsing_annotation . parsing_annotations_body  (162)
	parsing_annotations_body : .  (161)

	STRING  shift 50
	EOF  reduce 161
	EMBED  reduce 161
	METAVAR  reduce 161
	INDEXVAR  reduce 161
	RULES  reduce 161
	SUBRULES  reduce 161
	CONTEXTRULES  reduce 161
	SUBSTITUTIONS  reduce 161
	FREEVARS  reduce 161
	DEFNCLASS  reduce 161
	FUNDEFNCLASS  reduce 161
	HOMS  reduce 161
	PARSING  reduce 161
	COQSECTIONBEGIN  reduce 161
	COQSECTIONEND  reduce 161
	COQVARIABLE  reduce 161

	ident_desc  goto 83
	parsing_annotations_body  goto 133
	parsing_annotation  goto 85


state 86
	coq_section_begin : STRING .  (168)

	.  reduce 168


state 87
	item : COQSECTIONBEGIN coq_section_begin .  (15)

	.  reduce 15


state 88
	coq_section_end : STRING .  (169)

	.  reduce 169


state 89
	item : COQSECTIONEND coq_section_end .  (16)

	.  reduce 16


state 90
	coq_variable : STRING .  (170)

	.  reduce 170


state 91
	item : COQVARIABLE coq_variable .  (17)

	.  reduce 17


state 92
	items : item items .  (2)

	.  reduce 2


state 93
	ident_list : BLANKS ident_list .  (101)

	.  reduce 101


state 94
	ident_list : ident ident_list .  (100)

	.  reduce 100


state 95
	drule_line_annot : ident_list COLONCOLON . STRING homomorphism_list EOF  (111)

	STRING  shift 134
	.  error


state 96
	unfiltered_inner : STRING . unfiltered_inner  (177)
	unfiltered_inner : .  (176)

	STRING  shift 96
	BLANKS  shift 97
	DOUBLERIGHTBRACKET  reduce 176

	unfiltered_inner  goto 135


state 97
	unfiltered_inner : BLANKS . unfiltered_inner  (178)
	unfiltered_inner : .  (176)

	STRING  shift 96
	BLANKS  shift 97
	DOUBLERIGHTBRACKET  reduce 176

	unfiltered_inner  goto 136


state 98
	unfiltered_spec_el : DOUBLELEFTBRACKET unfiltered_inner . DOUBLERIGHTBRACKET  (173)

	DOUBLERIGHTBRACKET  shift 137
	.  error


state 99
	unfiltered_spec_el_list : unfiltered_spec_el unfiltered_spec_el_list .  (172)

	.  reduce 172


state 100
	embed_inner : STRING . embed_inner  (51)
	embed_inner : .  (50)

	STRING  shift 100
	BLANKS  shift 101
	DOUBLERIGHTBRACKET  reduce 50

	embed_inner  goto 138


state 101
	embed_inner : BLANKS . embed_inner  (52)
	embed_inner : .  (50)

	STRING  shift 100
	BLANKS  shift 101
	DOUBLERIGHTBRACKET  reduce 50

	embed_inner  goto 139

